force-app/main/default/objects/Webshop_Session__c/Webshop_Session__c.object-meta.xml
<CustomObject>
    <description>Webshop Session</description>
    <label>Webshop Session</label>
    <nameField>
        <displayFormat>WSS-{0000}</displayFormat>
        <label>Webshop Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webshop Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>