force-app/main/default/objects/Webshop_Session__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Is Active</description>
    <formula>Revoked_At__c = NULL &amp;&amp; Expires_At__c &gt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>