force-app/main/default/objects/Webshop_Session__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>Expires At datetime</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>