force-app/main/default/objects/Webshop_Session__c/fields/Issued_At__c.field-meta.xml
<CustomField>
    <fullName>Issued_At__c</fullName>
    <description>Issued At datetime</description>
    <label>Issued At</label>
    <type>DateTime</type>
</CustomField>