force-app/main/default/objects/Webshop_Session__c/fields/Last_Seen_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_At__c</fullName>
    <description>Last Seen At datetime</description>
    <label>Last Seen At</label>
    <type>DateTime</type>
</CustomField>