force-app/main/default/objects/Webshop_Session__c/fields/Revoked_At__c.field-meta.xml
<CustomField>
    <fullName>Revoked_At__c</fullName>
    <description>Revoked At datetime</description>
    <label>Revoked At</label>
    <type>DateTime</type>
</CustomField>