force-app/main/default/objects/Webshop_Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session Id</description>
    <label>Session Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>