force-app/main/default/objects/Webshop_Session__c/fields/Webshop_User__c.field-meta.xml
<CustomField>
    <fullName>Webshop_User__c</fullName>
    <description>Webshop User</description>
    <label>Webshop User</label>
    <referenceTo>Webshop_User__c</referenceTo>
    <relationshipLabel>Webshop Sessions</relationshipLabel>
    <relationshipName>Webshop_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>