force-app/main/default/objects/Webshop_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Webshop_User__c</columns>
    <columns>Active__c</columns>
    <columns>Expires_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>